--- a/PersonalBusinessManagement/appsettings.json
+++ b/PersonalBusinessManagement/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB; Database=PersonalBusinessManagement; Trusted_Connection=True; MultipleActiveResultSets=True;",
-    "TodoDbConnection": "Data Source= Data\\ToDo.DB.sqlite"
+    "DefaultConnection": "Data Source= Data\\ToDo.DB.sqlite;"
   },
   "Logging": {
     "LogLevel": {
