--- a/PersonalBusinessManagement/appsettings.json
+++ b/PersonalBusinessManagement/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source= Data\\ToDo.DB.sqlite;"
+    "DefaultConnection": "Data Source= DataAccess\\Data\\ToDo.DB.sqlite;"
   },
   "Logging": {
     "LogLevel": {
